--- a/src/View_Controller/Customers.fxml
+++ b/src/View_Controller/Customers.fxml
@@ -24,7 +24,7 @@
       <TableView fx:id="customerTableView" prefHeight="200.0" prefWidth="200.0">
         <columns>
             <TableColumn fx:id="customerNameCol" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="address1Col" prefWidth="75.0" text="Address" />
+            <TableColumn fx:id="addressCol" prefWidth="75.0" text="Address" />
             <TableColumn fx:id="address2Col" prefWidth="75.0" text="Address2" />
             <TableColumn fx:id="phoneCol" prefWidth="100.0" text="Phone Number" />
             <TableColumn fx:id="cityCol" prefWidth="100.0" text="City" />
