--- a/src/View_Controller/Customers.fxml
+++ b/src/View_Controller/Customers.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.CustomersController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="545.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="221.0" />
@@ -16,9 +16,9 @@
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="216.0" text="Add Customer" textAlignment="CENTER" />
-            <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="216.0" text="Edit Customer" textAlignment="CENTER" />
-            <Button alignment="CENTER" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="216.0" text="Delete Customer" textAlignment="CENTER" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="216.0" text="Add Customer" textAlignment="CENTER" />
+            <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onActionEdit" prefHeight="27.0" prefWidth="216.0" text="Edit Customer" textAlignment="CENTER" />
+            <Button alignment="CENTER" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="216.0" text="Delete Customer" textAlignment="CENTER" />
             <Button alignment="CENTER" layoutX="10.0" layoutY="64.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="216.0" text="Return to Menu" textAlignment="CENTER" />
          </children></VBox>
       <TableView fx:id="customerTableView" prefHeight="200.0" prefWidth="200.0">
