--- a/src/View_Controller/Customers.fxml
+++ b/src/View_Controller/Customers.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="545.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="221.0" />
@@ -14,21 +19,21 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+      <VBox prefHeight="396.0" prefWidth="115.0" GridPane.columnIndex="1">
          <children>
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="216.0" text="Add Customer" textAlignment="CENTER" />
             <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onActionEdit" prefHeight="27.0" prefWidth="216.0" text="Edit Customer" textAlignment="CENTER" />
             <Button alignment="CENTER" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="216.0" text="Delete Customer" textAlignment="CENTER" />
             <Button alignment="CENTER" layoutX="10.0" layoutY="64.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="216.0" text="Return to Menu" textAlignment="CENTER" />
          </children></VBox>
-      <TableView fx:id="customerTableView" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="customerTableView" prefHeight="396.0" prefWidth="591.0">
         <columns>
-            <TableColumn fx:id="customerNameCol" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="addressCol" prefWidth="75.0" text="Address" />
-            <TableColumn fx:id="address2Col" prefWidth="75.0" text="Address2" />
-            <TableColumn fx:id="phoneCol" prefWidth="100.0" text="Phone Number" />
-            <TableColumn fx:id="cityCol" prefWidth="100.0" text="City" />
-            <TableColumn fx:id="postalCode" prefWidth="100.0" text="Postal/Zip Code" />
+            <TableColumn fx:id="customerNameCol" prefWidth="88.0" text="Name" />
+            <TableColumn fx:id="addressCol" prefWidth="76.0" text="Address" />
+            <TableColumn fx:id="address2Col" prefWidth="79.0" text="Address2" />
+            <TableColumn fx:id="phoneCol" prefWidth="105.0" text="Phone Number" />
+            <TableColumn fx:id="cityCol" prefWidth="109.0" text="City" />
+            <TableColumn fx:id="postalCode" prefWidth="87.0" text="Postal Code" />
 
         </columns>
       </TableView>
