--- a/src/View_Controller/ModifyCustomer.fxml
+++ b/src/View_Controller/ModifyCustomer.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.control.ComboBox?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="480.0" xmlns:fx="http://javafx.com/fxml">
-<Label layoutX="154.0" layoutY="14.0" prefHeight="28.0" prefWidth="190.0" text="Modify Customer">
+<Label layoutX="154.0" layoutY="14.0" prefHeight="28.0" prefWidth="190.0" text="Customer">
     <font>
         <Font name="Times New Roman Bold" size="24.0" />
     </font>
