--- a/src/View_Controller/Appointments.fxml
+++ b/src/View_Controller/Appointments.fxml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="545.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="221.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="618.0" minWidth="10.0" prefWidth="618.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="0.0" prefWidth="0.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="221.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints maxHeight="396.0" minHeight="10.0" prefHeight="396.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-        <VBox prefHeight="396.0" prefWidth="197.0" GridPane.columnIndex="1">
+        <VBox prefHeight="396.0" prefWidth="197.0" GridPane.columnIndex="2">
                 <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="216.0" text="Add New Appointment" textAlignment="CENTER" />
                 <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onActionEdit" prefHeight="27.0" prefWidth="216.0" text="Edit Appointment" textAlignment="CENTER" />
                 <Button alignment="CENTER" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="216.0" text="Delete Appointment" textAlignment="CENTER" />
                 <Button alignment="CENTER" layoutX="10.0" layoutY="64.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="216.0" text="Return to Menu" textAlignment="CENTER" />
         </VBox>
-        <TableView fx:id="appointmentsTableView" prefHeight="200.0" prefWidth="200.0">
+        <TableView fx:id="appointmentsTableView" prefHeight="500.0" prefWidth="500.0">
             <columns>
-                <TableColumn fx:id="customerNameCol" prefWidth="114.0" text="Customer Name" />
-                <TableColumn fx:id="titleCol" prefWidth="86.0" text="Title" />
-                <TableColumn fx:id="descriptionCol" prefWidth="104.0" text="Description" />
-                <TableColumn fx:id="typeCol" prefWidth="74.0" text="Type" />
-                <TableColumn fx:id="startCol" prefWidth="95.0" text="Start" />
-                <TableColumn fx:id="endCol" prefWidth="71.0" text="End" />
+                <TableColumn fx:id="customerNameCol" prefWidth="122.0" text="Customer Name" />
+                <TableColumn fx:id="titleCol" prefWidth="69.0" text="Title" />
+                <TableColumn fx:id="descriptionCol" prefWidth="77.0" text="Description" />
+                <TableColumn fx:id="typeCol" prefWidth="60.0" text="Type" />
+                <TableColumn fx:id="startCol" prefWidth="137.0" text="Start" />
+                <TableColumn fx:id="endCol" prefWidth="114.0" text="End" />
             </columns>
         </TableView>
    <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
