--- a/src/View_Controller/Login.fxml
+++ b/src/View_Controller/Login.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentApp.View_Controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <TextField id="username" fx:id="usernameField" layoutX="220.0" layoutY="142.0" />
         <Label fx:id="loginLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="111.0" layoutY="70.0" prefHeight="60.0" prefWidth="371.0" text="Login" textAlignment="CENTER">
