--- a/src/View_Controller/Appointments.fxml
+++ b/src/View_Controller/Appointments.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,34 +13,39 @@
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="618.0" minWidth="10.0" prefWidth="618.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="0.0" prefWidth="0.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="221.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="0.0" prefWidth="7.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="178.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="396.0" minHeight="10.0" prefHeight="396.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="396.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="483.0" minHeight="0.0" prefHeight="483.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-        <VBox prefHeight="396.0" prefWidth="197.0" GridPane.columnIndex="2">
-                <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="216.0" text="Add New Appointment" textAlignment="CENTER" />
-                <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onActionEdit" prefHeight="27.0" prefWidth="216.0" text="Edit Appointment" textAlignment="CENTER" />
-                <Button alignment="CENTER" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="216.0" text="Delete Appointment" textAlignment="CENTER" />
-                <Button alignment="CENTER" layoutX="10.0" layoutY="64.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="216.0" text="Return to Menu" textAlignment="CENTER" />
-        </VBox>
-        <TableView fx:id="appointmentsTableView" prefHeight="500.0" prefWidth="500.0">
+        <VBox prefHeight="396.0" prefWidth="197.0" GridPane.columnIndex="2" />
+        <TableView fx:id="appointmentsTableView" prefHeight="500.0" prefWidth="500.0" GridPane.rowIndex="1">
             <columns>
-                <TableColumn fx:id="customerNameCol" prefWidth="122.0" text="Customer Name" />
-                <TableColumn fx:id="titleCol" prefWidth="69.0" text="Title" />
-                <TableColumn fx:id="descriptionCol" prefWidth="77.0" text="Description" />
-                <TableColumn fx:id="typeCol" prefWidth="60.0" text="Type" />
-                <TableColumn fx:id="startCol" prefWidth="137.0" text="Start" />
-                <TableColumn fx:id="endCol" prefWidth="114.0" text="End" />
+                <TableColumn fx:id="customerNameCol" prefWidth="133.0" text="Customer Name" />
+                <TableColumn fx:id="titleCol" prefWidth="61.0" text="Title" />
+                <TableColumn fx:id="descriptionCol" prefWidth="84.0" text="Description" />
+                <TableColumn fx:id="typeCol" prefWidth="76.0" text="Type" />
+                <TableColumn fx:id="startCol" prefWidth="111.0" text="Start" />
+                <TableColumn fx:id="endCol" prefWidth="135.0" text="End" />
             </columns>
         </TableView>
-   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2" />
+   <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
       <children>
-         <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="165.0" text="This Month" />
-         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="165.0" snapToPixel="false" text="This Week" textAlignment="CENTER" HBox.hgrow="NEVER" />
+                   <Button alignment="CENTER" layoutX="7.0" layoutY="28.0" mnemonicParsing="false" onAction="#onActionEdit" prefHeight="27.0" prefWidth="150.0" text="Edit Appointment" textAlignment="CENTER" />
+                   <Button alignment="CENTER" layoutX="7.0" layoutY="55.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="150.0" text="Delete Appointment" textAlignment="CENTER" />
+                   <Button alignment="CENTER" layoutX="7.0" layoutY="82.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="150.0" text="Return to Menu" textAlignment="CENTER" />
+                   <Button alignment="CENTER" layoutX="7.0" layoutY="1.0" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="150.0" text="Add New Appointment" textAlignment="CENTER" />
       </children>
-   </HBox>
+   </AnchorPane>
+   <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <children>
+         <Button layoutX="22.0" layoutY="13.0" mnemonicParsing="false" onAction="#onActionThisWeek" prefHeight="27.0" prefWidth="165.0" snapToPixel="false" text="This Week" textAlignment="CENTER" />
+         <Button layoutX="219.0" layoutY="13.0" mnemonicParsing="false" onAction="#onActionThisMonth" prefHeight="27.0" prefWidth="165.0" text="This Month" />
+         <Button layoutX="424.0" layoutY="14.0" mnemonicParsing="false" onAction="#onActionShowAll" prefHeight="27.0" prefWidth="165.0" text="Show All" />
+      </children>
+   </AnchorPane>
 </GridPane>
