--- a/src/View_Controller/Login.fxml
+++ b/src/View_Controller/Login.fxml
@@ -6,13 +6,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <TextField id="username" fx:id="usernameField" layoutX="220.0" layoutY="142.0" />
+        <TextField id="username" fx:id="usernameField" layoutX="220.0" layoutY="142.0" promptText="Username"/>
         <Label fx:id="loginLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="111.0" layoutY="70.0" prefHeight="60.0" prefWidth="371.0" text="Login" textAlignment="CENTER">
             <font>
                 <Font size="48.0" />
             </font>
         </Label>
-        <TextField id="password" fx:id="passwordField" layoutX="220.0" layoutY="180.0" />
+        <TextField id="password" fx:id="passwordField" layoutX="220.0" layoutY="180.0" promptText="Password"/>
         <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" layoutX="220.0" layoutY="218.0" mnemonicParsing="false" onAction="#onActionLogin" prefHeight="27.0" prefWidth="161.0" text="Login" textAlignment="CENTER" />
     </children>
 </AnchorPane>
