--- a/src/View_Controller/ModifyCustomer.fxml
+++ b/src/View_Controller/ModifyCustomer.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ComboBox?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="480.0" xmlns:fx="http://javafx.com/fxml">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="480.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
 <Label layoutX="154.0" layoutY="14.0" prefHeight="28.0" prefWidth="190.0" text="Customer">
     <font>
         <Font name="Times New Roman Bold" size="24.0" />
@@ -22,8 +22,8 @@
 <TextField fx:id="nameField" layoutX="47.0" layoutY="103.0" prefHeight="27.0" prefWidth="400.0" promptText="Name" />
 <TextField fx:id="addressField" layoutX="47.0" layoutY="139.0" prefHeight="27.0" prefWidth="400.0" promptText="Address" />
 <TextField fx:id="address2Field" layoutX="47.0" layoutY="175.0" prefHeight="27.0" prefWidth="400.0" promptText="Address2" />
-<TextField fx:id="postalCodeField" layoutX="249.0" layoutY="209.0" prefHeight="27.0" prefWidth="200.0" promptText="Zip" />
 <TextField fx:id="cityField" layoutX="47.0" layoutY="209.0" prefHeight="27.0" prefWidth="200.0" promptText="City" />
+<TextField fx:id="postalCodeField" layoutX="249.0" layoutY="209.0" prefHeight="27.0" prefWidth="200.0" promptText="Zip" />
 <ComboBox fx:id="countryField" layoutX="47.0" layoutY="243.0" prefHeight="27.0" prefWidth="200.0" />
 <TextField fx:id="phoneField" layoutX="249.0" layoutY="243.0" prefHeight="27.0" prefWidth="200.0" promptText="Phone" />
 </AnchorPane>
