--- a/src/View_Controller/Appointments.fxml
+++ b/src/View_Controller/Appointments.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
@@ -39,13 +41,18 @@
                    <Button alignment="CENTER" layoutX="7.0" layoutY="55.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="27.0" prefWidth="150.0" text="Delete Appointment" textAlignment="CENTER" />
                    <Button alignment="CENTER" layoutX="7.0" layoutY="82.0" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="27.0" prefWidth="150.0" text="Return to Menu" textAlignment="CENTER" />
                    <Button alignment="CENTER" layoutX="7.0" layoutY="1.0" mnemonicParsing="false" onAction="#onActionAdd" prefHeight="27.0" prefWidth="150.0" text="Add New Appointment" textAlignment="CENTER" />
+         <Button layoutY="442.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="163.0" snapToPixel="false" text="Weekly View" textAlignment="CENTER" />
       </children>
    </AnchorPane>
    <AnchorPane prefHeight="200.0" prefWidth="200.0">
       <children>
-         <Button layoutX="22.0" layoutY="13.0" mnemonicParsing="false" onAction="#onActionThisWeek" prefHeight="27.0" prefWidth="165.0" snapToPixel="false" text="This Week" textAlignment="CENTER" />
-         <Button layoutX="219.0" layoutY="13.0" mnemonicParsing="false" onAction="#onActionThisMonth" prefHeight="27.0" prefWidth="165.0" text="This Month" />
-         <Button layoutX="424.0" layoutY="14.0" mnemonicParsing="false" onAction="#onActionShowAll" prefHeight="27.0" prefWidth="165.0" text="Show All" />
+         <Button alignment="CENTER" layoutX="424.0" layoutY="14.0" mnemonicParsing="false" onAction="#onActionNextMonth" prefHeight="27.0" prefWidth="165.0" text="Next" textAlignment="CENTER" />
+         <Button alignment="CENTER" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onActionPrevMonth" prefHeight="27.0" prefWidth="165.0" text="Previous" textAlignment="CENTER" />
+         <Label alignment="CENTER" layoutX="202.0" layoutY="6.0" prefHeight="44.0" prefWidth="200.0" text="Month" textAlignment="CENTER">
+            <font>
+               <Font size="36.0" />
+            </font>
+         </Label>
       </children>
    </AnchorPane>
 </GridPane>
