--- a/src/View_Controller/Reports.fxml
+++ b/src/View_Controller/Reports.fxml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View_Controller.ReportsController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ReportsController">
+    <children>
+        <Label alignment="CENTER" layoutX="159.0" layoutY="25.0" text="Reports Menu" textAlignment="CENTER">
+            <font>
+                <Font size="48.0" />
+            </font>
+        </Label>
+        <VBox layoutX="123.0" layoutY="100.0" prefHeight="200.0" prefWidth="354.0">
+            <children>
+                <Button id="appointmentsBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onActionAppointmentsType" prefHeight="35.0" prefWidth="354.0" text="Appointments By Type" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Button>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onActionSchedule" prefHeight="35.0" prefWidth="354.0" text="Schedule By Consultant" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Button>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onActionAppointmentsByCustomer" prefHeight="35.0" prefWidth="354.0" text="Appointments By Customer" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Button>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onActionReturn" prefHeight="35.0" prefWidth="354.0" text="Go to Main Menu" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Button>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
